# AI-Provider-Finder

./: .gitignore  README.md
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/api/: providers.ts  search.ts
client/src/components/: ProviderTable.module.css  ProviderTable.tsx  ScoreDialog.tsx  SearchInput.module.css  SearchInput.tsx  SearchTips.module.css  SearchTips.tsx
client/src/pages/: Home.module.css  Home.tsx
client/src/types/: provider.ts  search.ts
server/: Dockerfile  README.md  pyproject.toml
server/src/: app.py  constants.py  db.py  error.py  models.py  prompt.py  queries.py  service.py
server/src/score/: models.py  parse.py  queries.py  service.py
server/src/search/: constants.py  models.py  parse.py  queries.py  service.py
