[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "CalebSutherland",email = "sutherlandcaleb12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.9.0,<3.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
